--- a/app/views/adds/index.html.erb
+++ b/app/views/adds/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Adds</h1>
 
-<%= form_with(model: @add, class: "row g-3") do |form| %>
+<%= form_with(model: @add) do |form| %>
   <% if @add.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(add.errors.count, "error") %> prohibited this add from being saved:</h2>
@@ -14,17 +14,22 @@
       </ul>
     </div>
   <% end %>
-  <div class="col-auto">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  
-  
-    <%= form.label :description %>
-    <%= form.text_area :description, size: "40x5" %>
+  <div class="form-group row">
+    <%= form.label :title, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :title %>
+    </div>
   </div>
-  <div class="col-auto">
-    <%= form.button :submit, class: "btn btn-primary mb-3" %>
+  <div class="form-group row">
+    <%= form.label :description, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :description, size: "20x3" %>
+    </div>
   </div>
+  <div class="form-group">
+    <%= form.button :submit, class: "btn btn-primary" %>
+  </div>
+
 <% end %>
 <hr>
 <h3>Listing</h3>
