--- a/app/views/adds/index.html.erb
+++ b/app/views/adds/index.html.erb
@@ -2,43 +2,34 @@
 
 <h1>Adds</h1>
 
-<%= form_with(model: @add) do |form| %>
-  <% if @add.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(add.errors.count, "error") %> prohibited this add from being saved:</h2>
-
-      <ul>
-        <% add.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="form-group row">
-    <%= form.label :title, class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_field :title %>
-    </div>
-  </div>
-  <div class="form-group row">
-    <%= form.label :description, class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= form.text_area :description, size: "20x3" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= form.button :submit, class: "btn btn-primary" %>
-  </div>
-
-<% end %>
+<div>
+  <%= link_to "Create Add", new_add_path, class: "btn btn-primary" %>
+</div>
 <hr>
 <h3>Listing</h3>
-<div id="adds">
-  <% @adds.each do |add| %>
-    <%= render add %>
-    <p>
-      <%= link_to "Show this add", add %>
-    </p>
-  <% end %>
+
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
+      <tr>
+        <th>Title</td>
+        <th>Published on</th>
+        <th>Description</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @adds.each do |add| %>
+        <%= content_tag :tr, id: dom_id(add), class:  dom_class(add) do %>
+          <td><%= add.title %></td>
+          <td><%= add.created_at.to_fs(:long) %></td>
+          <td><%= add.description %></td>
+          <td><%= link_to "Show", add %></td>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
 </div>
+
+<%== pagy_bootstrap_nav(@pagy) %>
 
