--- a/app/views/adds/_form.html.erb
+++ b/app/views/adds/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: add) do |form| %>
-  <% if add.errors.any? %>
+<%= form_with(model: @add) do |form| %>
+  <% if @add.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(add.errors.count, "error") %> prohibited this add from being saved:</h2>
 
@@ -10,18 +10,20 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  <div class="form-group row">
+    <%= form.label :title, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :title %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= form.label :description, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :description, size: "20x3" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= form.button :submit, class: "btn btn-primary" %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
