--- a/app/views/adds/index.html.erb
+++ b/app/views/adds/index.html.erb
@@ -1,30 +1,26 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Adds</h1>
+<h1>Anuncios</h1>
 
 <div>
-  <%= link_to "Create Add", new_add_path, class: "btn btn-primary" %>
+  <%= link_to "Crear Anuncio", new_add_path, class: "btn btn-primary" %>
 </div>
 <hr>
-<h3>Listing</h3>
+<h3>Listado</h3>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-        <th>Title</td>
-        <th>Published on</th>
-        <th>Description</th>
-        <th>Actions</th>
+        <th>Título</td>
+        <th>Fecha de publicación</th>
       </tr>
     </thead>
     <tbody>
       <% @adds.each do |add| %>
         <%= content_tag :tr, id: dom_id(add), class:  dom_class(add) do %>
-          <td><%= add.title %></td>
-          <td><%= add.created_at.to_fs(:long) %></td>
-          <td><%= add.description %></td>
-          <td><%= link_to "Show", add %></td>
+          <td><%= link_to "#{add.title}", add %></td>
+          <td><%= I18n.l(add.created_at, format: :long)%></td>
         <% end %>
       <% end %>
     </tbody>
