Add bootstrap icons for sorting column

--- a/app/views/adds/index.html.erb
+++ b/app/views/adds/index.html.erb
@@ -13,7 +13,10 @@
     <thead>
       <tr>
         <th>Título</td>
-        <th>Fecha de publicación</th>
+        <th>Fecha de publicación
+          <i class="bi bi-sort-down-alt"></i>
+          <i class="bi bi-sort-down"></i>
+        </th>
       </tr>
     </thead>
     <tbody>
