Complete HST-11 with sort direction select and seed records with random DateTime

--- a/app/views/adds/index.html.erb
+++ b/app/views/adds/index.html.erb
@@ -13,10 +13,7 @@
     <thead>
       <tr>
         <th>Título</td>
-        <th>Fecha de publicación
-          <i class="bi bi-sort-down-alt"></i>
-          <i class="bi bi-sort-down"></i>
-        </th>
+        <th><%= sortable %></th>
       </tr>
     </thead>
     <tbody>
