Add Rich text editor to form using Action Text and Trix

--- a/app/views/adds/_add.html.erb
+++ b/app/views/adds/_add.html.erb
@@ -9,7 +9,7 @@
     <%=  add.created_at.to_fs(:long) %>
   </p>
 
-  <p>
+  <p class="trix-content">
     <strong>Description:</strong>
     <%= add.description %>
   </p>
