--- a/app/views/adds/_form.html.erb
+++ b/app/views/adds/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @add) do |form| %>
   <% if @add.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(add.errors.count, "error") %> prohibited this add from being saved:</h2>
+      <h2><%= pluralize(add.errors.count, "error") %> <%= I18n.t('errors.template.header.other')%></h2>
 
       <ul>
         <% add.errors.each do |error| %>
@@ -10,16 +10,16 @@
       </ul>
     </div>
   <% end %>
-  <div class="form-group row">
+  <div class="form-group">
     <%= form.label :title, class: "col-sm-2 col-form-label" %>
     <div class="col-sm-10">
-      <%= form.text_field :title %>
+      <%= form.text_field :title, class: "form-control form-control-lg" %>
     </div>
   </div>
-  <div class="form-group row">
+  <div class="form-group">
     <%= form.label :description, class: "col-sm-2 col-form-label" %>
     <div class="col-sm-10">
-      <%= form.text_area :description, size: "20x3" %>
+      <%= form.rich_text_area :description, rows: "20", style: "height:100%", class: "form-control form-control-lg" %>
     </div>
   </div>
   <div class="form-group">
