--- a/app/views/adds/new.html.erb
+++ b/app/views/adds/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New add</h1>
+<h1>Anuncio Nuevo</h1>
 
 <%= render "form", add: @add %>
 
 <br>
 
 <div>
-  <%= link_to "Back to adds", adds_path %>
+  <%= link_to "regresar al listado de anuncios", adds_path %>
 </div>
