--- a/app/views/adds/edit.html.erb
+++ b/app/views/adds/edit.html.erb
@@ -4,7 +4,10 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this add", @add %> |
-  <%= link_to "Back to adds", adds_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <%= link_to "Cancelar", @add, class: "btn btn-primary" %>
+    </div>
+  </div>
 </div>
